--- a/src/i18n/translation/en.json
+++ b/src/i18n/translation/en.json
@@ -1,3 +1,91 @@
 {
-  "AppName": "red devils"
+  "AppName": "Red Devils",
+  "红魔NFT": "Red Devils NFT",
+  "铸造 NFT": "Mint NFT",
+  "级别提升": "Level Up",
+  "资产记录": "Asset Records",
+  "RMOB记录": "RMOB Records",
+  "直推列表": "Direct Referral List",
+  "返回": "Back",
+  "选择语言": "Select Language",
+  "确定": "Confirm",
+  "取消": "Cancel",
+  "普通非活跃": "Inactive Member",
+  "升级": "Upgrade",
+  "链接钱包": "Link Wallet",
+  "邀请铸造": "Invite to Mint",
+  "团队社长": "Team Leader",
+  "邀请空投": "Invite Airdrop",
+  "代币": "Token",
+  "Min结束后按照规则进行空投。": "Airdrop will follow the rules after Min ends.",
+  "铸造 NFT 获得代币空投": "Mint NFT for Token Airdrop",
+  "资产金额 = 已领取 + 待处理": "Asset Amount = Claimed + Pending",
+  "邀请": "Invite",
+  "邀请链接": "Invite Link",
+  "普通会员每邀请铸造一个NFT可获得一份空投福利；推荐铸造20个NFT的可升级为会长；团队中拥有20位会长可升级为基金会社长；邀请越多级别越高福利越多。": "Regular members get an airdrop for each NFT minted through their invite; recommending 20 NFTs upgrades to Leader; having 20 Leaders in the team upgrades to Foundation Leader; more invites lead to higher levels and more benefits.",
+  "数据披露": "Data Disclosure",
+  "资金池": "Fund Pool",
+  "社长席位": "Leader Seats",
+  "基金会社长席位": "Foundation Leader Seats",
+  "待领取": "Pending",
+  "领取": "Claim",
+  "钱包未链接，无法向您显示 NFT": "Wallet not linked, unable to display NFT",
+  "邀请列表": "Invite List",
+  "NFT总量：": "Total NFTs:",
+  "MINT余量：": "Remaining MINT:",
+  "当前MINT价格：": "Current MINT Price:",
+  "价格说明：": "Price Explanation:",
+  "100USDT起，每增加100名普通会员，NFT价格上涨1%，既：前100名价格为100USDT/枚，101-200名价格为100u+100u*1%=101USDT/枚，以此类推。": "Starting at 100USDT, the NFT price increases by 1% for every 100 new members: first 100 at 100USDT each, 101-200 at 101USDT each, and so on.",
+  "授权USDT": "Authorize USDT",
+  "当前级别": "Current Level",
+  "普通活跃": "Active Member",
+  "提升级别": "Upgrade Level",
+  "社长": "Leader",
+  "当前升级价格：": "Current Upgrade Price:",
+  "升级费用100USDT起，其中gas费2USDT，剩余部分50%进入资金池，另外50%平均分给所有升级成功的社长和基金会社长。自第二个社长升级开始，每升级一名社长所需铸造费用增加10%，既第二位社长升级铸造费用为100u+100*10%=110USDT，以此类推。": "Upgrade cost starts at 100USDT, including 2USDT gas fee; 50% goes to the fund pool, and 50% is distributed among successful Leaders and Foundation Leaders. From the second Leader onwards, each upgrade cost increases by 10%, i.e., second Leader upgrade costs 110USDT, and so on.",
+  "升级条件": "Upgrade Conditions",
+  "普通会员": "Regular Member",
+  "(限量20000个)": "(Limited to 20000)",
+  "1. MINT一枚NFT成为非活跃普通会员": "1. MINT an NFT to become an Inactive Member",
+  "2. MINT NFT并推荐MINT成为活跃普通会员": "2. MINT NFT and recommend MINT to become an Active Member",
+  "3. 享1%代币空投平分(所有普通会员)": "3. 1% token airdrop shared among all members",
+  "4. 活跃普通会员根据推荐MINT数量额外有空投权益。": "4. Active members get extra airdrop benefits based on the number of recommended MINTs.",
+  "(限量500个)": "(Limited to 500)",
+  "1. 先成为活跃普通会员，并推荐MINT 20枚NFT": "1. Become an Active Member and recommend 20 NFTs",
+  "2. 需支付100USDT起升级费用成为社长(第二个起递增10%)": "2. Pay 100USDT to upgrade to Leader (10% increment from the second Leader onwards)",
+  "3. 享普通会员权益+0.5%空投代币平分(所有社长)": "3. Enjoy member benefits + 0.5% token airdrop shared among all Leaders",
+  "4. 享社长升级费用50%平分(扣除2USDT GAS费后)": "4. Share 50% of Leader upgrade fees (after 2USDT gas fee)",
+  "5. 从推荐MINT 21枚开始直推的铸造费用归社长所有": "5. Mint fees from direct referrals beyond 21 NFTs go to the Leader",
+  "基金会社长": "Foundation Leader",
+  "(限量20个)": "(Limited to 20)",
+  "1. 先成为社长，并团队中有20个社长": "1. Become a Leader with 20 Leaders in your team",
+  "2. 享社长权益+0.5%空投代币平分(所有基金会社长)": "2. Enjoy Leader benefits + 0.5% token airdrop shared among all Foundation Leaders",
+  "3. 另外基金会社长参与所有项目分成": "3. Additionally, Foundation Leaders share in all project profits",
+  "发放记录": "Distribution Records",
+  "升级费平分": "Upgrade Fee Distribution",
+  "直推>20NFT": "Direct Referral >20 NFTs",
+  "空投记录": "Airdrop Records",
+  "所有": "All",
+  "NFT空投": "NFT Airdrop",
+  "社长空投": "Leader Airdrop",
+  "直推空投": "Direct Referral Airdrop",
+  "奖励类型": "Reward Type",
+  "NFT控投": "NFT Holding",
+  "发放时间": "Distribution Time",
+  "发放数量": "Distribution Quantity",
+  "领取记录": "Claim Records",
+  "领取时间": "Claim Time",
+  "领取数量": "Claim Quantity",
+  "领取状态": "Claim Status",
+  "确认中": "Confirming",
+  "领取成功": "Claim Successful",
+  "交易取消": "Transaction Cancelled",
+  "地址": "Address",
+  "级别": "Level",
+  "直推NFT": "Direct Referral NFT",
+  "非活跃普通": "Inactive Member",
+  "活跃普通": "Active Member",
+
+  "复制成功": "Copy successful",
+  "领取成功，前往钱包查看": "Claim successful, please check your wallet."
 }
