--- a/src/i18n/translation/cn.json
+++ b/src/i18n/translation/cn.json
@@ -35,17 +35,17 @@
   "MINT余量：": "MINT余量：",
   "当前MINT价格：": "当前MINT价格：",
   "价格说明：": "价格说明：",
-  "100USDT起，每增加100名普通会员，NFT价格上涨1%，既：前100名价格为100USDT/枚，101-200名价格为100u+100u*1%=101USDT/枚，以此类推。": "100USDT起，每增加100名普通会员，NFT价格上涨1%，既：前100名价格为100USDT/枚，101-200名价格为100u+100u*1%=101USDT/枚，以此类推。",
+  "{{value1}} USDT起，每增加 {{value2}} 名普通会员，NFT价格上涨 {{value3}}，既：前 {{value2}} 名价格为 {{value1}} USDT/枚，value4 名价格为{{value1}}u+{{value1}}u*{{value3}}={{value5}} USDT/枚，以此类推。": "{{value1}} USDT起，每增加{{value2}}名普通会员，NFT价格上涨{{value3}}，既：前{{value2}}名价格为{{value1}} USDT/枚，{{value4}}名价格为{{value1}}u+{{value1}}u*{{value3}}={{value5}} USDT/枚，以此类推。",
   "授权USDT": "授权USDT",
   "当前级别": "当前级别",
   "普通活跃": "普通活跃",
   "提升级别": "提升级别",
   "社长": "社长",
   "当前升级价格：": "当前升级价格：",
-  "升级费用100USDT起，其中gas费2USDT，剩余部分50%进入资金池，另外50%平均分给所有升级成功的社长和基金会社长。自第二个社长升级开始，每升级一名社长所需铸造费用增加10%，既第二位社长升级铸造费用为100u+100*10%=110USDT，以此类推。": "升级费用100USDT起，其中gas费2USDT，剩余部分50%进入资金池，另外50%平均分给所有升级成功的社长和基金会社长。自第二个社长升级开始，每升级一名社长所需铸造费用增加10%，既第二位社长升级铸造费用为100u+100*10%=110USDT，以此类推。",
+  "升级费用xxx USDT起，其中gas费2USDT，剩余部分50%进入资金池，另外50%平均分给所有升级成功的社长和基金会社长。自第二个社长升级开始，每升级一名社长所需铸造费用增加xxx，既第二位社长升级铸造费用为xxxu+xxx*xxx=xxx USDT，以此类推。": "升级费用{{value1}} USDT起，其中gas费2USDT，剩余部分50%进入资金池，另外50%平均分给所有升级成功的社长和基金会社长。自第二个社长升级开始，每升级一名社长所需铸造费用增加{{value2}}，既第二位社长升级铸造费用为{{value1}}u+{{value1}}*{{value2}}={{value3}} USDT，以此类推。",
   "升级条件": "升级条件",
   "普通会员": "普通会员",
-  "(限量20000个)": "(限量20000个)",
+  "(限量xxx个)": "(限量 {{value}} 个)",
   "1. MINT一枚NFT成为非活跃普通会员": "1. MINT一枚NFT成为非活跃普通会员",
   "2. MINT NFT并推荐MINT成为活跃普通会员": "2. MINT NFT并推荐MINT成为活跃普通会员",
   "3. 享1%代币空投平分(所有普通会员)": "3. 享1%代币空投平分(所有普通会员)",
@@ -87,5 +87,19 @@
   "活跃普通": "活跃普通",
 
   "复制成功": "复制成功",
-  "领取成功，前往钱包查看": "领取成功，前往钱包查看"
+  "领取成功，前往钱包查看": "领取成功，前往钱包查看",
+  "链接钱包中...": "链接钱包中...",
+  "无": "无",
+  "服务器错误": "服务器错误",
+  "余额不足": "余额不足",
+  "MINT成功，返回首页查看": "MINT成功，返回首页查看",
+  "正在授权USDT": "正在授权USDT",
+  "购买中": "购买中",
+  "领取中": "领取中",
+  "MINT Nft 获取邀请链接": "MINT Nft 获取邀请链接",
+  "链接钱包获取邀请链接": "链接钱包获取邀请链接",
+  "正在获取已授权金额": "正在获取已授权金额",
+  "升级成功，返回首页查看": "升级成功，返回首页查看",
+  "无级别提升": "无级别提升",
+  "没有更多数据了": "没有更多数据了"
 }
