--- a/src/i18n/translation/de.json
+++ b/src/i18n/translation/de.json
@@ -35,17 +35,17 @@
   "MINT余量：": "Verbleibende MINT:",
   "当前MINT价格：": "Aktueller MINT-Preis:",
   "价格说明：": "Preiserklärung:",
-  "100USDT起，每增加100名普通会员，NFT价格上涨1%，既：前100名价格为100USDT/枚，101-200名价格为100u+100u*1%=101USDT/枚，以此类推。": "Beginnend bei 100USDT steigt der NFT-Preis um 1% für jede zusätzlichen 100 Mitglieder: die ersten 100 kosten 100USDT pro Stück, 101-200 kosten 101USDT pro Stück usw.",
+  "{{value1}} USDT起，每增加 {{value2}} 名普通会员，NFT价格上涨 {{value3}}，既：前 {{value2}} 名价格为 {{value1}} USDT/枚，value4 名价格为{{value1}}u+{{value1}}u*{{value3}}={{value5}} USDT/枚，以此类推。": "Beginnend bei {{value1}} USDT steigt der NFT-Preis um {{value3}} für jede zusätzlichen {{value2}} Mitglieder: die ersten {{value2}} kosten {{value1}} USDT pro Stück, {{value4}} kosten {{value1}}u+{{value1}}u*{{value3}}={{value5}} USDT pro Stück usw.",
   "授权USDT": "USDT autorisieren",
   "当前级别": "Aktuelles Level",
   "普通活跃": "Aktives Mitglied",
   "提升级别": "Levelaufstieg",
   "社长": "Vorsitzender",
   "当前升级价格：": "Aktueller Upgrade-Preis:",
-  "升级费用100USDT起，其中gas费2USDT，剩余部分50%进入资金池，另外50%平均分给所有升级成功的社长和基金会社长。自第二个社长升级开始，每升级一名社长所需铸造费用增加10%，既第二位社长升级铸造费用为100u+100*10%=110USDT，以此类推。": "Upgrade-Kosten ab 100USDT, davon 2USDT Gas-Gebühren, 50% des Restbetrags gehen in den Liquiditätspool und die anderen 50% werden auf alle erfolgreichen Vorsitzenden und Fundmanager aufgeteilt. Ab dem zweiten Vorsitzenden steigen die Prägekosten um 10% pro Aufstieg, also 110USDT für den zweiten, usw.",
+  "升级费用xxx USDT起，其中gas费2USDT，剩余部分50%进入资金池，另外50%平均分给所有升级成功的社长和基金会社长。自第二个社长升级开始，每升级一名社长所需铸造费用增加xxx，既第二位社长升级铸造费用为xxxu+xxx*xxx=xxx USDT，以此类推。": "Upgrade-Kosten ab {{value1}} USDT, davon 2USDT Gas-Gebühren, 50% des Restbetrags gehen in den Liquiditätspool und die anderen 50% werden auf alle erfolgreichen Vorsitzenden und Fundmanager aufgeteilt. Ab dem zweiten Vorsitzenden steigen die Prägekosten um {{value2}} pro Aufstieg, also {{value1}}u+{{value1}}*{{value2}}={{value3}} USDT für den zweiten, usw.",
   "升级条件": "Upgrade-Bedingungen",
   "普通会员": "Normales Mitglied",
-  "(限量20000个)": "(Begrenzt auf 20.000 Stück)",
+  "(限量xxx个)": "(Begrenzt auf {{value}} Stück)",
   "1. MINT一枚NFT成为非活跃普通会员": "1. Präge ein NFT, um inaktives Mitglied zu werden",
   "2. MINT NFT并推荐MINT成为活跃普通会员": "2. Präge und empfehle NFTs, um aktives Mitglied zu werden",
   "3. 享1%代币空投平分(所有普通会员)": "3. Erhalte 1% Token-Airdrop gleichmäßig verteilt (alle normalen Mitglieder)",
@@ -87,5 +87,19 @@
   "活跃普通": "Aktiv allgemein",
 
   "复制成功": "Erfolgreich kopiert",
-  "领取成功，前往钱包查看": "Erfolgreich abgerufen. Bitte überprüfen Sie Ihre Brieftasche."
+  "领取成功，前往钱包查看": "Erfolgreich abgerufen. Bitte überprüfen Sie Ihre Brieftasche.",
+  "链接钱包中...": "Wallet wird verbunden...",
+  "无": "Keiner",
+  "服务器错误": "Serverfehler",
+  "余额不足": "Unzureichendes Guthaben",
+  "MINT成功，返回首页查看": "MINT erfolgreich, zur Startseite zurückkehren, um nachzusehen.",
+  "正在授权USDT": "USDT wird autorisiert",
+  "购买中": "In Bearbeitung",
+  "领取中": "In Bearbeitung",
+  "MINT Nft 获取邀请链接": "MINT Nft Einladungslink erhalten",
+  "链接钱包获取邀请链接": "Verknüpfen Sie Ihre Brieftasche, um den Einladungslink zu erhalten.",
+  "正在获取已授权金额": "Aktuell wird der autorisierte Betrag abgerufen.",
+  "升级成功，返回首页查看": "Upgrade erfolgreich abgeschlossen, zurück zur Startseite zur Ansicht.",
+  "无级别提升": "Beförderung ohne Rang",
+  "没有更多数据了": "Keine weiteren Daten"
 }
