--- a/src/i18n/translation/jp.json
+++ b/src/i18n/translation/jp.json
@@ -35,17 +35,17 @@
   "MINT余量：": "残りのMINT：",
   "当前MINT价格：": "現在のMINT価格：",
   "价格说明：": "価格説明：",
-  "100USDT起，每增加100名普通会员，NFT价格上涨1%，既：前100名价格为100USDT/枚，101-200名价格为100u+100u*1%=101USDT/枚，以此类推。": "100USDTから、100人の会員が増えるごとにNFT価格が1%上昇：最初の100人は100USDT/個、101-200人は101USDT/個、以降も同様。",
+  "{{value1}} USDT起，每增加 {{value2}} 名普通会员，NFT价格上涨 {{value3}}，既：前 {{value2}} 名价格为 {{value1}} USDT/枚，value4 名价格为{{value1}}u+{{value1}}u*{{value3}}={{value5}} USDT/枚，以此类推。": "{{value1}} USDTから、{{value2}}人の会員が増えるごとにNFT価格が{{value3}}上昇：最初の{{value2}}人は{{value1}}USDT/個、{{value4}}人は{{value1}}u+{{value1}}u*{{value3}}={{value5}} USDT/個、以降も同様。",
   "授权USDT": "USDTの承認",
   "当前级别": "現在のレベル",
   "普通活跃": "活躍メンバー",
   "提升级别": "レベルアップ",
   "社长": "リーダー",
   "当前升级价格：": "現在のアップグレード価格：",
-  "升级费用100USDT起，其中gas费2USDT，剩余部分50%进入资金池，另外50%平均分给所有升级成功的社长和基金会社长。自第二个社长升级开始，每升级一名社长所需铸造费用增加10%，既第二位社长升级铸造费用为100u+100*10%=110USDT，以此类推。": "アップグレード費用は100USDTから、うちガス代2USDT、残りの50%は資金プールに入り、もう50%はアップグレードに成功したリーダーとファンドリーダーに分配。2人目のリーダーからは、アップグレード費用が10%ずつ増加、つまり2人目は110USDT、以降も同様。",
+  "升级费用xxx USDT起，其中gas费2USDT，剩余部分50%进入资金池，另外50%平均分给所有升级成功的社长和基金会社长。自第二个社长升级开始，每升级一名社长所需铸造费用增加xxx，既第二位社长升级铸造费用为xxxu+xxx*xxx=xxx USDT，以此类推。": "アップグレード費用は{{value1}} USDTから、うちガス代2USDT、残りの50%は資金プールに入り、もう50%はアップグレードに成功したリーダーとファンドリーダーに分配。2人目のリーダーからは、アップグレード費用が{{value2}}ずつ増加、つまり2人目は{{value1}}u+{{value1}}*{{value2}}={{value3}} USDT、以降も同様。",
   "升级条件": "アップグレード条件",
   "普通会员": "一般会員",
-  "(限量20000个)": "(限定20000個)",
+  "(限量xxx个)": "(限定 {{value}} 個)",
   "1. MINT一枚NFT成为非活跃普通会员": "1. NFTを1枚鋳造して非活躍メンバーになる",
   "2. MINT NFT并推荐MINT成为活跃普通会员": "2. NFTを鋳造し、他者に鋳造を推奨して活躍メンバーになる",
   "3. 享1%代币空投平分(所有普通会员)": "3. 一般会員は1%のトークンエアドロップを均等に分配",
@@ -87,5 +87,19 @@
   "活跃普通": "活躍一般",
 
   "复制成功": "コピーが成功しました",
-  "领取成功，前往钱包查看": "受け取りが成功しました。ウォレットで確認してください。"
+  "领取成功，前往钱包查看": "受け取りが成功しました。ウォレットで確認してください。",
+  "链接钱包中...": "ウォレットをリンク中...",
+  "无": "無",
+  "服务器错误": "サーバーエラー",
+  "余额不足": "ざんだかふそく",
+  "MINT成功，返回首页查看": "MINTが成功しました。ホームページに戻って確認してください",
+  "正在授权USDT": "USDTの認証中",
+  "购买中": "購入中 (こうにゅうちゅう)",
+  "领取中": "しょりちゅう",
+  "MINT Nft 获取邀请链接": "MINT Nft 招待リンクを取得する",
+  "链接钱包获取邀请链接": "ウォレットをリンクして招待リンクを取得します。",
+  "正在获取已授权金额": "承認済み金額を取得中です",
+  "升级成功，返回首页查看": "アップグレードが成功しました。ホームページに戻って確認してください。",
+  "无级别提升": "階級なしの昇進",
+  "没有更多数据了": "これ以上のデータはありません"
 }
