--- a/src/i18n/translation/en.json
+++ b/src/i18n/translation/en.json
@@ -12,7 +12,7 @@
   "取消": "Cancel",
   "普通非活跃": "Inactive Member",
   "升级": "Upgrade",
-  "链接钱包": "Link Wallet",
+  "链接钱包": "Connect Wallet",
   "邀请铸造": "Invite to Mint",
   "团队社长": "Team Leader",
   "邀请空投": "Invite Airdrop",
@@ -35,17 +35,17 @@
   "MINT余量：": "Remaining MINT:",
   "当前MINT价格：": "Current MINT Price:",
   "价格说明：": "Price Explanation:",
-  "100USDT起，每增加100名普通会员，NFT价格上涨1%，既：前100名价格为100USDT/枚，101-200名价格为100u+100u*1%=101USDT/枚，以此类推。": "Starting at 100USDT, the NFT price increases by 1% for every 100 new members: first 100 at 100USDT each, 101-200 at 101USDT each, and so on.",
+  "{{value1}} USDT起，每增加 {{value2}} 名普通会员，NFT价格上涨 {{value3}}，既：前 {{value2}} 名价格为 {{value1}} USDT/枚，value4 名价格为{{value1}}u+{{value1}}u*{{value3}}={{value5}} USDT/枚，以此类推。": "Starting at {{value1}} USDT, the NFT price increases by {{value3}} for every {{value2}} new members: first {{value2}} at {{value1}} USDT each, {{value4}} at {{value1}}u+{{value1}}u*{{value3}}={{value5}} USDT each, and so on.",
   "授权USDT": "Authorize USDT",
   "当前级别": "Current Level",
   "普通活跃": "Active Member",
   "提升级别": "Upgrade Level",
   "社长": "Leader",
   "当前升级价格：": "Current Upgrade Price:",
-  "升级费用100USDT起，其中gas费2USDT，剩余部分50%进入资金池，另外50%平均分给所有升级成功的社长和基金会社长。自第二个社长升级开始，每升级一名社长所需铸造费用增加10%，既第二位社长升级铸造费用为100u+100*10%=110USDT，以此类推。": "Upgrade cost starts at 100USDT, including 2USDT gas fee; 50% goes to the fund pool, and 50% is distributed among successful Leaders and Foundation Leaders. From the second Leader onwards, each upgrade cost increases by 10%, i.e., second Leader upgrade costs 110USDT, and so on.",
+  "升级费用xxx USDT起，其中gas费2USDT，剩余部分50%进入资金池，另外50%平均分给所有升级成功的社长和基金会社长。自第二个社长升级开始，每升级一名社长所需铸造费用增加xxx，既第二位社长升级铸造费用为xxxu+xxx*xxx=xxx USDT，以此类推。": "Upgrade cost starts at {{value1}} USDT, including 2USDT gas fee; 50% goes to the fund pool, and 50% is distributed among successful Leaders and Foundation Leaders. From the second Leader onwards, each upgrade cost increases by {{value2}}, i.e., second Leader upgrade costs {{value1}}u+{{value1}}*{{value2}}={{value3}} USDT, and so on.",
   "升级条件": "Upgrade Conditions",
   "普通会员": "Regular Member",
-  "(限量20000个)": "(Limited to 20000)",
+  "(限量xxx个)": "(Limited to {{value}})",
   "1. MINT一枚NFT成为非活跃普通会员": "1. MINT an NFT to become an Inactive Member",
   "2. MINT NFT并推荐MINT成为活跃普通会员": "2. MINT NFT and recommend MINT to become an Active Member",
   "3. 享1%代币空投平分(所有普通会员)": "3. 1% token airdrop shared among all members",
@@ -87,5 +87,19 @@
   "活跃普通": "Active Member",
 
   "复制成功": "Copy successful",
-  "领取成功，前往钱包查看": "Claim successful, please check your wallet."
+  "领取成功，前往钱包查看": "Claim successful, please check your wallet.",
+  "链接钱包中...": "connecting wallet...",
+  "无": "None",
+  "服务器错误": "Server Error",
+  "余额不足": "Insufficient balance",
+  "MINT成功，返回首页查看": "MINT succeeded, return to the homepage to check.",
+  "正在授权USDT": "Authorizing USDT",
+  "购买中": "Purchasing",
+  "领取中": "Processing",
+  "MINT Nft 获取邀请链接": "MINT Nft invite link",
+  "链接钱包获取邀请链接": "Link your wallet to get the invitation link.",
+  "正在获取已授权金额": "Currently retrieving authorized amount.",
+  "升级成功，返回首页查看": "Upgrade successful, return to homepage to view.",
+  "无级别提升": "Promotion without rank",
+  "没有更多数据了": "No more data"
 }
