--- a/src/i18n/translation/tw.json
+++ b/src/i18n/translation/tw.json
@@ -35,17 +35,17 @@
   "MINT余量：": "MINT餘量：",
   "当前MINT价格：": "當前MINT價格：",
   "价格说明：": "價格說明：",
-  "100USDT起，每增加100名普通会员，NFT价格上涨1%，既：前100名价格为100USDT/枚，101-200名价格为100u+100u*1%=101USDT/枚，以此类推。": "100USDT起，每增加100名普通會員，NFT價格上漲1%，即：前100名價格為100USDT/枚，101-200名價格為100u+100u*1%=101USDT/枚，以此類推。",
+  "{{value1}} USDT起，每增加 {{value2}} 名普通会员，NFT价格上涨 {{value3}}，既：前 {{value2}} 名价格为 {{value1}} USDT/枚，value4 名价格为{{value1}}u+{{value1}}u*{{value3}}={{value5}} USDT/枚，以此类推。": "{{value1}} USDT起，每增加{{value2}}名普通會員，NFT價格上漲{{value3}}，即：前{{value2}}名價格為{{value1}} USDT/枚，{{value4}}名價格為{{value1}}u+{{value1}}u*{{value3}}={{value5}} USDT/枚，以此類推。",
   "授权USDT": "授權USDT",
   "当前级别": "當前級別",
   "普通活跃": "普通活躍",
   "提升级别": "提升級別",
   "社长": "社長",
   "当前升级价格：": "當前升級價格：",
-  "升级费用100USDT起，其中gas费2USDT，剩余部分50%进入资金池，另外50%平均分给所有升级成功的社长和基金会社长。自第二个社长升级开始，每升级一名社长所需铸造费用增加10%，既第二位社长升级铸造费用为100u+100*10%=110USDT，以此类推。": "升級費用100USDT起，其中gas費2USDT，剩餘部分50%進入資金池，另外50%平均分給所有升級成功的社長和基金會社長。自第二個社長升級開始，每升級一名社長所需鑄造費用增加10%，即第二位社長升級鑄造費用為100u+100*10%=110USDT，以此類推。",
+  "升级费用xxx USDT起，其中gas费2USDT，剩余部分50%进入资金池，另外50%平均分给所有升级成功的社长和基金会社长。自第二个社长升级开始，每升级一名社长所需铸造费用增加xxx，既第二位社长升级铸造费用为xxxu+xxx*xxx=xxx USDT，以此类推。": "升級費用{{value1}} USDT起，其中gas費2USDT，剩餘部分50%進入資金池，另外50%平均分給所有升級成功的社長和基金會社長。自第二個社長升級開始，每升級一名社長所需鑄造費用增加{{value2}}，即第二位社長升級鑄造費用為{{value1}}u+{{value1}}*{{value2}}={{value3}} USDT，以此類推。",
   "升级条件": "升級條件",
   "普通会员": "普通會員",
-  "(限量20000个)": "(限量20000個)",
+  "(限量xxx个)": "(限量 {{value}} 個)",
   "1. MINT一枚NFT成为非活跃普通会员": "1. MINT一枚NFT成為非活躍普通會員",
   "2. MINT NFT并推荐MINT成为活跃普通会员": "2. MINT NFT並推薦MINT成為活躍普通會員",
   "3. 享1%代币空投平分(所有普通会员)": "3. 享1%代幣空投平分(所有普通會員)",
@@ -87,5 +87,19 @@
   "活跃普通": "活躍普通",
 
   "复制成功": "複製成功",
-  "领取成功，前往钱包查看": "領取成功，前往錢包查看"
+  "领取成功，前往钱包查看": "領取成功，前往錢包查看",
+  "链接钱包中...": "連結錢包中...",
+  "无": "無",
+  "服务器错误": "伺服器錯誤",
+  "余额不足": "餘額不足",
+  "MINT成功，返回首页查看": "MINT成功，返回首頁查看",
+  "正在授权USDT": "正在授權USDT",
+  "购买中": "購買中",
+  "领取中": "處理中",
+  "MINT Nft 获取邀请链接": "MINT Nft 獲取邀請鏈接",
+  "链接钱包获取邀请链接": "連結錢包以獲取邀請鏈接。",
+  "正在获取已授权金额": "正在取得已授權金額",
+  "升级成功，返回首页查看": "升級成功，返回首頁查看。",
+  "无级别提升": "無級別提升",
+  "没有更多数据了": "沒有更多數據了"
 }
