--- a/src/i18n/translation/cn.json
+++ b/src/i18n/translation/cn.json
@@ -101,5 +101,6 @@
   "正在获取已授权金额": "正在获取已授权金额",
   "升级成功，返回首页查看": "升级成功，返回首页查看",
   "无级别提升": "无级别提升",
-  "没有更多数据了": "没有更多数据了"
+  "没有更多数据了": "没有更多数据了",
+  "升级中": "升级中"
 }
