--- a/src/i18n/translation/de.json
+++ b/src/i18n/translation/de.json
@@ -101,5 +101,6 @@
   "正在获取已授权金额": "Aktuell wird der autorisierte Betrag abgerufen.",
   "升级成功，返回首页查看": "Upgrade erfolgreich abgeschlossen, zurück zur Startseite zur Ansicht.",
   "无级别提升": "Beförderung ohne Rang",
-  "没有更多数据了": "Keine weiteren Daten"
+  "没有更多数据了": "Keine weiteren Daten",
+  "升级中": "Wird aktualisiert"
 }
