--- a/src/i18n/translation/jp.json
+++ b/src/i18n/translation/jp.json
@@ -101,5 +101,6 @@
   "正在获取已授权金额": "承認済み金額を取得中です",
   "升级成功，返回首页查看": "アップグレードが成功しました。ホームページに戻って確認してください。",
   "无级别提升": "階級なしの昇進",
-  "没有更多数据了": "これ以上のデータはありません"
+  "没有更多数据了": "これ以上のデータはありません",
+  "升级中": "アップグレード中"
 }
