--- a/src/i18n/translation/tw.json
+++ b/src/i18n/translation/tw.json
@@ -101,5 +101,6 @@
   "正在获取已授权金额": "正在取得已授權金額",
   "升级成功，返回首页查看": "升級成功，返回首頁查看。",
   "无级别提升": "無級別提升",
-  "没有更多数据了": "沒有更多數據了"
+  "没有更多数据了": "沒有更多數據了",
+  "升级中": "升級中"
 }
