--- a/src/i18n/translation/cn.json
+++ b/src/i18n/translation/cn.json
@@ -3,7 +3,7 @@
   "红魔NFT": "红魔NFT",
   "铸造 NFT": "铸造 NFT",
   "级别提升": "级别提升",
-  "资产记录": "资产记录",
+  "收益记录": "收益记录",
   "RMOB记录": "RMOB记录",
   "直推列表": "直推列表",
   "返回": "返回",
@@ -16,10 +16,10 @@
   "邀请铸造": "邀请铸造",
   "团队社长": "团队社长",
   "邀请空投": "邀请空投",
-  "代币": "代币",
+  "收益": "收益",
   "Min结束后按照规则进行空投。": "Min结束后按照规则进行空投。",
   "铸造 NFT 获得代币空投": "铸造 NFT 获得代币空投",
-  "资产金额 = 已领取 + 待处理": "资产金额 = 已领取 + 待处理",
+  "总收益= 已领取 + 待领取": "总收益= 已领取 + 待领取",
   "邀请": "邀请",
   "邀请链接": "邀请链接",
   "普通会员每邀请铸造一个NFT可获得一份空投福利；推荐铸造20个NFT的可升级为会长；团队中拥有20位会长可升级为基金会社长；邀请越多级别越高福利越多。": "普通会员每邀请铸造一个NFT可获得一份空投福利；推荐铸造20个NFT的可升级为会长；团队中拥有20位会长可升级为基金会社长；邀请越多级别越高福利越多。",
@@ -102,5 +102,6 @@
   "升级成功，返回首页查看": "升级成功，返回首页查看",
   "无级别提升": "无级别提升",
   "没有更多数据了": "没有更多数据了",
-  "升级中": "升级中"
+  "升级中": "升级中",
+  "无等级": "无等级"
 }
