--- a/src/i18n/translation/en.json
+++ b/src/i18n/translation/en.json
@@ -3,7 +3,7 @@
   "红魔NFT": "Red Devils NFT",
   "铸造 NFT": "Mint NFT",
   "级别提升": "Level Up",
-  "资产记录": "Asset Records",
+  "收益记录": "Revenue Record",
   "RMOB记录": "RMOB Records",
   "直推列表": "Direct Referral List",
   "返回": "Back",
@@ -16,10 +16,10 @@
   "邀请铸造": "Invite to Mint",
   "团队社长": "Team Leader",
   "邀请空投": "Invite Airdrop",
-  "代币": "Token",
+  "收益": "Income",
   "Min结束后按照规则进行空投。": "Airdrop will follow the rules after Min ends.",
   "铸造 NFT 获得代币空投": "Mint NFT for Token Airdrop",
-  "资产金额 = 已领取 + 待处理": "Asset Amount = Claimed + Pending",
+  "总收益= 已领取 + 待领取": "Total Revenue = Claimed + Pending",
   "邀请": "Invite",
   "邀请链接": "Invite Link",
   "普通会员每邀请铸造一个NFT可获得一份空投福利；推荐铸造20个NFT的可升级为会长；团队中拥有20位会长可升级为基金会社长；邀请越多级别越高福利越多。": "Regular members get an airdrop for each NFT minted through their invite; recommending 20 NFTs upgrades to Leader; having 20 Leaders in the team upgrades to Foundation Leader; more invites lead to higher levels and more benefits.",
@@ -36,7 +36,7 @@
   "当前MINT价格：": "Current MINT Price:",
   "价格说明：": "Price Explanation:",
   "{{value1}} USDT起，每增加 {{value2}} 名普通会员，NFT价格上涨 {{value3}}，既：前 {{value2}} 名价格为 {{value1}} USDT/枚，value4 名价格为{{value1}}u+{{value1}}u*{{value3}}={{value5}} USDT/枚，以此类推。": "Starting at {{value1}} USDT, the NFT price increases by {{value3}} for every {{value2}} new members: first {{value2}} at {{value1}} USDT each, {{value4}} at {{value1}}u+{{value1}}u*{{value3}}={{value5}} USDT each, and so on.",
-  "授权USDT": "Authorize USDT",
+  "授权USDT": "Approve USDT",
   "当前级别": "Current Level",
   "普通活跃": "Active Member",
   "提升级别": "Upgrade Level",
@@ -96,11 +96,12 @@
   "正在授权USDT": "Authorizing USDT",
   "购买中": "Purchasing",
   "领取中": "Processing",
-  "MINT Nft 获取邀请链接": "MINT Nft invite link",
+  "MINT Nft 获取邀请链接": "Mint NFT to get invitation link",
   "链接钱包获取邀请链接": "Link your wallet to get the invitation link.",
   "正在获取已授权金额": "Currently retrieving authorized amount.",
   "升级成功，返回首页查看": "Upgrade successful, return to homepage to view.",
   "无级别提升": "Promotion without rank",
   "没有更多数据了": "No more data",
-  "升级中": "Upgrading"
+  "升级中": "Upgrading",
+  "无等级": "No Grade"
 }
