--- a/src/i18n/translation/jp.json
+++ b/src/i18n/translation/jp.json
@@ -3,7 +3,7 @@
   "红魔NFT": "紅魔NFT",
   "铸造 NFT": "NFT 鋳造",
   "级别提升": "レベルアップ",
-  "资产记录": "資産記録",
+  "收益记录": "収益実績",
   "RMOB记录": "RMOB記録",
   "直推列表": "ダイレクト推薦リスト",
   "返回": "戻る",
@@ -16,10 +16,10 @@
   "邀请铸造": "鋳造を招待",
   "团队社长": "チームリーダー",
   "邀请空投": "エアドロップ招待",
-  "代币": "トークン",
+  "收益": "所得",
   "Min结束后按照规则进行空投。": "Min終了後、ルールに従ってエアドロップを行います。",
   "铸造 NFT 获得代币空投": "NFTを鋳造してトークンエアドロップを獲得",
-  "资产金额 = 已领取 + 待处理": "資産額 = 受領済み + 処理中",
+  "总收益= 已领取 + 待领取": "総収入 = 受領済み + 回収対象",
   "邀请": "招待",
   "邀请链接": "招待リンク",
   "普通会员每邀请铸造一个NFT可获得一份空投福利；推荐铸造20个NFT的可升级为会长；团队中拥有20位会长可升级为基金会社长；邀请越多级别越高福利越多。": "一般会員はNFT鋳造の招待ごとにエアドロップを獲得；20個のNFTを鋳造することでリーダーに昇格；チーム内に20人のリーダーがいるとファンドリーダーに昇格；招待が多いほどレベルが上がり、特典が増える。",
@@ -102,5 +102,6 @@
   "升级成功，返回首页查看": "アップグレードが成功しました。ホームページに戻って確認してください。",
   "无级别提升": "階級なしの昇進",
   "没有更多数据了": "これ以上のデータはありません",
-  "升级中": "アップグレード中"
+  "升级中": "アップグレード中",
+  "无等级": "グレードなし"
 }
