--- a/src/i18n/translation/tw.json
+++ b/src/i18n/translation/tw.json
@@ -3,7 +3,7 @@
   "红魔NFT": "紅魔NFT",
   "铸造 NFT": "鑄造 NFT",
   "级别提升": "級別提升",
-  "资产记录": "資產記錄",
+  "收益记录": "收益記錄",
   "RMOB记录": "RMOB記錄",
   "直推列表": "直推列表",
   "返回": "返回",
@@ -16,10 +16,10 @@
   "邀请铸造": "邀請鑄造",
   "团队社长": "團隊社長",
   "邀请空投": "邀請空投",
-  "代币": "代幣",
+  "收益": "收益",
   "Min结束后按照规则进行空投。": "Min結束後按照規則進行空投。",
   "铸造 NFT 获得代币空投": "鑄造 NFT 獲得代幣空投",
-  "资产金额 = 已领取 + 待处理": "資產金額 = 已領取 + 待處理",
+  "总收益= 已领取 + 待领取": "總收益 = 已領取 + 待領取",
   "邀请": "邀請",
   "邀请链接": "邀請鏈接",
   "普通会员每邀请铸造一个NFT可获得一份空投福利；推荐铸造20个NFT的可升级为会长；团队中拥有20位会长可升级为基金会社长；邀请越多级别越高福利越多。": "普通會員每邀請鑄造一個NFT可獲得一份空投福利；推薦鑄造20個NFT的可升級為會長；團隊中擁有20位會長可升級為基金會社長；邀請越多級別越高福利越多。",
@@ -102,5 +102,6 @@
   "升级成功，返回首页查看": "升級成功，返回首頁查看。",
   "无级别提升": "無級別提升",
   "没有更多数据了": "沒有更多數據了",
-  "升级中": "升級中"
+  "升级中": "升級中",
+  "无等级": "無等級"
 }
