--- a/src/i18n/translation/cn.json
+++ b/src/i18n/translation/cn.json
@@ -1,6 +1,6 @@
 {
   "AppName": "红魔",
-  "红魔NFT": "红魔NFT",
+  "红魔股权NFT": "红魔股权NFT",
   "铸造 NFT": "铸造 NFT",
   "级别提升": "级别提升",
   "收益记录": "收益记录",
@@ -103,5 +103,6 @@
   "无级别提升": "无级别提升",
   "没有更多数据了": "没有更多数据了",
   "升级中": "升级中",
-  "无等级": "无等级"
+  "无等级": "无等级",
+  "无效的邀请链接": "无效的邀请链接"
 }
