--- a/src/i18n/translation/tw.json
+++ b/src/i18n/translation/tw.json
@@ -1,6 +1,6 @@
 {
   "AppName": "紅魔",
-  "红魔NFT": "紅魔NFT",
+  "红魔股权NFT": "紅魔鬼股權NFT",
   "铸造 NFT": "鑄造 NFT",
   "级别提升": "級別提升",
   "收益记录": "收益記錄",
@@ -103,5 +103,6 @@
   "无级别提升": "無級別提升",
   "没有更多数据了": "沒有更多數據了",
   "升级中": "升級中",
-  "无等级": "無等級"
+  "无等级": "無等級",
+  "无效的邀请链接": "無效的邀請連結"
 }
