--- a/src/i18n/translation/jp.json
+++ b/src/i18n/translation/jp.json
@@ -1,6 +1,6 @@
 {
   "AppName": "紅魔",
-  "红魔NFT": "紅魔NFT",
+  "红魔股权NFT": "レッドデビルズ株式NFT",
   "铸造 NFT": "NFT 鋳造",
   "级别提升": "レベルアップ",
   "收益记录": "収益実績",
@@ -103,5 +103,6 @@
   "无级别提升": "階級なしの昇進",
   "没有更多数据了": "これ以上のデータはありません",
   "升级中": "アップグレード中",
-  "无等级": "グレードなし"
+  "无等级": "グレードなし",
+  "无效的邀请链接": "無効な招待リンクです"
 }
