--- a/src/i18n/translation/en.json
+++ b/src/i18n/translation/en.json
@@ -104,5 +104,6 @@
   "没有更多数据了": "No more data",
   "升级中": "Upgrading",
   "无等级": "No Grade",
-  "无效的邀请链接": "Invalid invitation link"
+  "无效的邀请链接": "Invalid invitation link",
+  "交易红魔股权NFT": "Trade Red Devil Equity NFT"
 }
