--- a/src/i18n/translation/jp.json
+++ b/src/i18n/translation/jp.json
@@ -104,5 +104,6 @@
   "没有更多数据了": "これ以上のデータはありません",
   "升级中": "アップグレード中",
   "无等级": "グレードなし",
-  "无效的邀请链接": "無効な招待リンクです"
+  "无效的邀请链接": "無効な招待リンクです",
+  "交易红魔股权NFT": "レッドデビル株式NFTを取引する"
 }
