--- a/src/i18n/translation/tw.json
+++ b/src/i18n/translation/tw.json
@@ -104,5 +104,6 @@
   "没有更多数据了": "沒有更多數據了",
   "升级中": "升級中",
   "无等级": "無等級",
-  "无效的邀请链接": "無效的邀請連結"
+  "无效的邀请链接": "無效的邀請連結",
+  "交易红魔股权NFT": "交易紅魔股權NFT"
 }
