--- a/src/i18n/translation/cn.json
+++ b/src/i18n/translation/cn.json
@@ -104,5 +104,7 @@
   "没有更多数据了": "没有更多数据了",
   "升级中": "升级中",
   "无等级": "无等级",
-  "无效的邀请链接": "无效的邀请链接"
+  "无效的邀请链接": "无效的邀请链接",
+
+  "交易红魔股权NFT": "交易红魔股权NFT"
 }
