--- a/src/i18n/translation/de.json
+++ b/src/i18n/translation/de.json
@@ -104,5 +104,6 @@
   "没有更多数据了": "Keine weiteren Daten",
   "升级中": "Wird aktualisiert",
   "无等级": "Keine Bewertung",
-  "无效的邀请链接": "Ungültiger Einladungslink"
+  "无效的邀请链接": "Ungültiger Einladungslink",
+  "交易红魔股权NFT": "Handel mit Red Devil Equity NFT"
 }
