--- a/src/i18n/translation/jp.json
+++ b/src/i18n/translation/jp.json
@@ -42,7 +42,7 @@
   "提升级别": "レベルアップ",
   "社长": "リーダー",
   "当前升级价格：": "現在のアップグレード価格：",
-  "升级费用xxx USDT起，其中gas费2USDT，剩余部分50%进入资金池，另外50%平均分给所有升级成功的社长和基金会社长。自第二个社长升级开始，每升级一名社长所需铸造费用增加xxx，既第二位社长升级铸造费用为xxxu+xxx*xxx=xxx USDT，以此类推。": "アップグレード費用は{{value1}} USDTから、うちガス代2USDT、残りの50%は資金プールに入り、もう50%はアップグレードに成功したリーダーとファンドリーダーに分配。2人目のリーダーからは、アップグレード費用が{{value2}}ずつ増加、つまり2人目は{{value1}}u+{{value1}}*{{value2}}={{value3}} USDT、以降も同様。",
+  "升级费用xxx USDT起，50%进入资金池，另外50%平均分给所有升级成功的社长和基金会社长。自第二个社长升级开始，每升级一名社长所需铸造费用增加xxx，既第二位社长升级铸造费用为xxxu+xxx*xxx=xxx USDT，以此类推。": "アップグレード費用は{{value1}} USDTから、残りの50%は資金プールに入り、もう50%はアップグレードに成功したリーダーとファンドリーダーに分配。2人目のリーダーからは、アップグレード費用が{{value2}}ずつ増加、つまり2人目は{{value1}}u+{{value1}}*{{value2}}={{value3}} USDT、以降も同様。",
   "升级条件": "アップグレード条件",
   "普通会员": "一般会員",
   "(限量xxx个)": "(限定 {{value}} 個)",
@@ -105,5 +105,9 @@
   "升级中": "アップグレード中",
   "无等级": "グレードなし",
   "无效的邀请链接": "無効な招待リンクです",
-  "交易红魔股权NFT": "レッドデビル株式NFTを取引する"
+  "交易红魔股权NFT": "レッドデビル株式NFTを取引する",
+
+  "上级链接": "上司のリンク",
+  "邀请链接：": "招待リンク：",
+  "上级地址：": "上司の住所："
 }
