--- a/src/i18n/translation/cn.json
+++ b/src/i18n/translation/cn.json
@@ -42,7 +42,7 @@
   "提升级别": "提升级别",
   "社长": "社长",
   "当前升级价格：": "当前升级价格：",
-  "升级费用xxx USDT起，其中gas费2USDT，剩余部分50%进入资金池，另外50%平均分给所有升级成功的社长和基金会社长。自第二个社长升级开始，每升级一名社长所需铸造费用增加xxx，既第二位社长升级铸造费用为xxxu+xxx*xxx=xxx USDT，以此类推。": "升级费用{{value1}} USDT起，其中gas费2USDT，剩余部分50%进入资金池，另外50%平均分给所有升级成功的社长和基金会社长。自第二个社长升级开始，每升级一名社长所需铸造费用增加{{value2}}，既第二位社长升级铸造费用为{{value1}}u+{{value1}}*{{value2}}={{value3}} USDT，以此类推。",
+  "升级费用xxx USDT起，50%进入资金池，另外50%平均分给所有升级成功的社长和基金会社长。自第二个社长升级开始，每升级一名社长所需铸造费用增加xxx，既第二位社长升级铸造费用为xxxu+xxx*xxx=xxx USDT，以此类推。": "升级费用{{value1}} USDT起，50%进入资金池，另外50%平均分给所有升级成功的社长和基金会社长。自第二个社长升级开始，每升级一名社长所需铸造费用增加{{value2}}，既第二位社长升级铸造费用为{{value1}}u+{{value1}}*{{value2}}={{value3}} USDT，以此类推。",
   "升级条件": "升级条件",
   "普通会员": "普通会员",
   "(限量xxx个)": "(限量 {{value}} 个)",
@@ -106,5 +106,8 @@
   "无等级": "无等级",
   "无效的邀请链接": "无效的邀请链接",
 
-  "交易红魔股权NFT": "交易红魔股权NFT"
+  "交易红魔股权NFT": "交易红魔股权NFT",
+  "上级链接": "上级链接",
+  "邀请链接：": "邀请链接：",
+  "上级地址：": "上级地址："
 }
