--- a/src/i18n/translation/en.json
+++ b/src/i18n/translation/en.json
@@ -42,7 +42,7 @@
   "提升级别": "Upgrade Level",
   "社长": "Leader",
   "当前升级价格：": "Current Upgrade Price:",
-  "升级费用xxx USDT起，其中gas费2USDT，剩余部分50%进入资金池，另外50%平均分给所有升级成功的社长和基金会社长。自第二个社长升级开始，每升级一名社长所需铸造费用增加xxx，既第二位社长升级铸造费用为xxxu+xxx*xxx=xxx USDT，以此类推。": "Upgrade cost starts at {{value1}} USDT, including 2USDT gas fee; 50% goes to the fund pool, and 50% is distributed among successful Leaders and Foundation Leaders. From the second Leader onwards, each upgrade cost increases by {{value2}}, i.e., second Leader upgrade costs {{value1}}u+{{value1}}*{{value2}}={{value3}} USDT, and so on.",
+  "升级费用xxx USDT起，50%进入资金池，另外50%平均分给所有升级成功的社长和基金会社长。自第二个社长升级开始，每升级一名社长所需铸造费用增加xxx，既第二位社长升级铸造费用为xxxu+xxx*xxx=xxx USDT，以此类推。": "Upgrade cost starts at {{value1}} USDT, 50% goes to the fund pool, and 50% is distributed among successful Leaders and Foundation Leaders. From the second Leader onwards, each upgrade cost increases by {{value2}}, i.e., second Leader upgrade costs {{value1}}u+{{value1}}*{{value2}}={{value3}} USDT, and so on.",
   "升级条件": "Upgrade Conditions",
   "普通会员": "Regular Member",
   "(限量xxx个)": "(Limited to {{value}})",
@@ -105,5 +105,8 @@
   "升级中": "Upgrading",
   "无等级": "No Grade",
   "无效的邀请链接": "Invalid invitation link",
-  "交易红魔股权NFT": "Trade Red Devil Equity NFT"
+  "交易红魔股权NFT": "Trade Red Devil Equity NFT",
+  "上级链接": "Superior's Link",
+  "邀请链接：": "Invitation Link:",
+  "上级地址：": "Superior's Address:"
 }
