--- a/src/i18n/translation/tw.json
+++ b/src/i18n/translation/tw.json
@@ -42,7 +42,7 @@
   "提升级别": "提升級別",
   "社长": "社長",
   "当前升级价格：": "當前升級價格：",
-  "升级费用xxx USDT起，其中gas费2USDT，剩余部分50%进入资金池，另外50%平均分给所有升级成功的社长和基金会社长。自第二个社长升级开始，每升级一名社长所需铸造费用增加xxx，既第二位社长升级铸造费用为xxxu+xxx*xxx=xxx USDT，以此类推。": "升級費用{{value1}} USDT起，其中gas費2USDT，剩餘部分50%進入資金池，另外50%平均分給所有升級成功的社長和基金會社長。自第二個社長升級開始，每升級一名社長所需鑄造費用增加{{value2}}，即第二位社長升級鑄造費用為{{value1}}u+{{value1}}*{{value2}}={{value3}} USDT，以此類推。",
+  "升级费用xxx USDT起，50%进入资金池，另外50%平均分给所有升级成功的社长和基金会社长。自第二个社长升级开始，每升级一名社长所需铸造费用增加xxx，既第二位社长升级铸造费用为xxxu+xxx*xxx=xxx USDT，以此类推。": "升級費用{{value1}} USDT起，50%進入資金池，另外50%平均分給所有升級成功的社長和基金會社長。自第二個社長升級開始，每升級一名社長所需鑄造費用增加{{value2}}，即第二位社長升級鑄造費用為{{value1}}u+{{value1}}*{{value2}}={{value3}} USDT，以此類推。",
   "升级条件": "升級條件",
   "普通会员": "普通會員",
   "(限量xxx个)": "(限量 {{value}} 個)",
@@ -105,5 +105,9 @@
   "升级中": "升級中",
   "无等级": "無等級",
   "无效的邀请链接": "無效的邀請連結",
-  "交易红魔股权NFT": "交易紅魔股權NFT"
+  "交易红魔股权NFT": "交易紅魔股權NFT",
+
+  "上级链接": "上級鏈接",
+  "邀请链接：": "邀請鏈接：",
+  "上级地址：": "上級地址："
 }
